# noi-software

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  MakefileTemplate  SConstruct  generateMakefile.sh  poweroff.sh  runTests.sh  vlgsuppress.conf
include/: CInstrument.hpp  config.hpp
include/Snd/: CChain.hpp  CEffect.hpp  CInstrument.hpp
include/doc/: MainPage.hpp  Namespaces.hpp
include/gfx/: CNcurses.hpp
include/hw/: CI2CGpioExtender.hpp  CI2CGpioExtenders.hpp  CNoiZeroHw.hpp  CPhysicalInputHandler.hpp  CWiringPiHandler.hpp  HwEnums.hpp
include/lgc/: CAppState.hpp  CNoiApp.hpp  CParameter.cpp  CParameter.hpp
include/lib/: portaudio.h
include/msc/: CDebugInfo.hpp  CLocklessQue.hpp  CLogger.hpp  CMaintainer.hpp  CSerializationNode.hpp  CTeam3Lock.hpp  CTeamLock.hpp  Common.hpp  Functions.hpp
include/snd/: CAdsr.hpp  CAdsrSettings.hpp  CAudioDevice.hpp  CAudioDeviceConfig.hpp  CAudioDeviceInfo.hpp  CAudioDevicePA.hpp  CChain.hpp  CChainMember.hpp  CEffect.hpp  CEffectChain.hpp  CInstrument.hpp  CLimiter.hpp  CMidiMsg.hpp  CMidiProcessor.hpp  CSndCore.hpp  CSndHelpers.hpp  CTimeInfo.hpp  CTrack.hpp  CTrackManager.hpp  CTrackSlice.hpp  NSndConfig.hpp  SndEnums.hpp
include/ui/: CInputEventInfo.hpp  CUi.hpp  CWindow.hpp  CWindowManager.hpp  UiEnums.hpp
plg/: CPluginFactory.cpp  CPluginFactory.hpp  CPluginInfo.cpp  CPluginInfo.hpp
plg/midiProcessors/: CSequencer.cpp  CSequencer.hpp
src/: CInstrument.cpp  main.cpp
src/Snd/: CChain.cpp  CEffect.cpp  CEffectChain.cpp  CInstrument.cpp
src/gfx/: CNcurses.cpp
tst/: NMsc_CMaintainer.cpp
(+85 files in other folders)
